--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
 	<title>ICD Tool</title>
 	<link rel="stylesheet" href="/lib/bower_components/angular-material/angular-material.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="/style/css/main.css">
+	<!-- <link rel="stylesheet" href="/style/css/main.css"> -->
 </head>
-<body ng-app="icd-tool">
-	<div ui-view></div>
+<body ng-app="icd-tool" layout="column">
+	<!-- Toolbar-->
+	<md-toolbar layout="row">
+		<h1 .md-display-3>ICD-10 Tool Prototype</h1>
+	</md-toolbar>
+
+	<div ui-view>
+		
+	</div>
+
 	<!-- DEPENDENCIES -->
-	<script src="/lib/bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="/lib/bower_components/angular/angular.min.js"></script>
+	<script src="/lib/bower_components/angularfire/dist/angularfire.min.js"></script>
 	<script src="/lib/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 	<script src="/lib/bower_components/angular-aria/angular-aria.js"></script>
 	<script src="/lib/bower_components/angular-animate/angular-animate.js"></script>
